--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
+body {
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    color: black;
+}
+
 .header {
     display: inline-flex;
     width: 1600px;
     height: 80px;
-    border-bottom: 1px solid #ECECEC;
 }
 
 .logo {
@@ -31,105 +35,318 @@
     margin-bottom: 32px;
 }
 
+li {
+    list-style-type: none;
+    padding-right: 30px;
+}
+
 .studia {
-    display: inline-flex;
     width: 49px;
     height: 16px;
+    color: #2196F3;
+    font-size: 14px;
 }
 
 .portfolio {
-    display: inline-flex;
     padding-left: 50px;
     width: 77px;
     height: 16px;
+    color: #212121;
+    font-size: 14px;
 }
 
 .contacts {
-    display: inline-flex;
     padding-left: 50px;
     width: 68px;
     height: 16px;
+    color: #212121;
+    font-size: 14px;
 }
 
 .mail {
-    display: flex;
-    flex-direction: row;
     padding-top: 32px;
     padding-bottom: 32px;
     margin-left: 331px;
     width: 135px;
     height: 16px;
+    text-decoration: none;
+    color: #2196F3;
 }
 
 .phone {
-    display: flex;
-    flex-direction: row;
     padding-top: 32px;
     padding-bottom: 32px;
     padding-left: 50px;
-    margin-right: 215px;
-    width: 122px;
-    height: 16px;
+    text-decoration: none;
+    color: #757575;
+}
+
+a:hover {
+    text-decoration: underline #2196F3 0.15em;
+}
+
+a {
+    text-decoration: none;
+}
+
+.efect {
+    background-color: #2F303A;
+    width: 1600px;
+    height: 600px;
+}
+
+.for-h1 {
+    text-align: center;
+    padding-top: 200px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-family: 'Roboto';
+    font-weight: 900;
+    font-size: 44px;
+    letter-spacing: 0.06em;
+    font-style: normal;
+    line-height: 1.36;
+    margin-bottom: 30px;
+}
+
+.order {
+    background-color: #2196F3;
+    color: #FFFFFF;
+    border-radius: 4px;
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    margin-left: 700px;
+}
+
+.text-button {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+}
+
+.items {
+    display: inline-flex;
+    padding-left: 215px;
+    padding-right: 215px;
+}
+
+h3 {
+    color: #212121;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+}
+
+p {
+    color: #757575;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+}
+
+.block {
+    width: 270px;
+    height: 75px;
+    padding-right: 30px;
+    padding-top: 94px;
+}
+
+h2 {
+    text-align: center;
+    color: #212121;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    padding-top: 94px;
+}
+
+.images {
+    display: inline-flex;
+    padding-left: 215px;
+    padding-right: 215px;
+    padding-top: 50px;
+}
+
+.dream-team {
+    margin-top: 94px;
+    background-color: #F5F4FA;
+    width: 1600px;
+    height: 648px;
+}
+
+.team {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    margin-right: 30px;
+    width: 270px;
+    padding: 0px;
+}
+
+.full-name {
+    text-align: center;
+    margin-top: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    color: #212121;
+}
+
+.position {
+    text-align: center;
+    margin-top: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.18;
+    color: #757575;
+}
+
+footer {
+    background-color: #2F303A;
+    width: 1600px;
+    height: 252px;
+}
+
+.studio-footer {
+    color: white;
+}
+
+.logo-footer {
+    display: flex;
+    padding-top: 60px;
+    width: 145px;
+    height: 31px;
+    margin-left: 215px;
+    font-size: 26px;
+    font-weight: bold;
+    font-family: Raleway;
+}
+
+.map-footer {
+    display: flex;
+    margin-left: 215px;
+    padding-top: 20px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+.mail-footer {
+    display: flex;
+    margin-left: 215px;
+    padding-top: 9px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.74;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.tel-footer {
+    display: flex;
+    margin-left: 215px;
+    padding-top: 9px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.74;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 
-/* .buttons */
+/* page-portfolio */
+
+.header-portfolio {
+    display: inline-flex;
+    width: 1600px;
+    height: 80px;
+    border-bottom: 1px solid #ECECEC;
+}
+
+.logo-portfolio {
+    width: 145px;
+    height: 31px;
+    margin-top: 24px;
+    margin-bottom: 25px;
+    margin-left: 215px;
+    margin-right: 93px;
+    font-size: 26px;
+    font-weight: bold;
+    font-family: Raleway;
+}
+
+.web-portfolio {
+    color: #2196F3;
+}
+
+.studio-portfolio {
+    color: black;
+}
+
+.portfolio-2 {
+    padding-left: 50px;
+    width: 77px;
+    height: 16px;
+    color: #2196F3;
+    font-size: 14px;
+}
+
+.studia-portfolio {
+    width: 49px;
+    height: 16px;
+    color: #212121;
+    font-size: 14px;
+}
+
+.contacts-portfolio {
+    padding-left: 50px;
+    width: 68px;
+    height: 16px;
+    color: #212121;
+    font-size: 14px;
+}
+
+.mail-portfolio {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-left: 331px;
+    width: 135px;
+    height: 16px;
+    text-decoration: none;
+    color: #757575;
+}
+
+.phone-portfolio {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 50px;
+    text-decoration: none;
+    color: #757575;
+}
 
 .buttons {
     display: flex;
-}
-
-.button-box-all {
-    display: inline-flex;
-    margin-top: 94px;
-    margin-left: 495px;
-    width: 73px;
-    height: 38px;
-    background: #2196F3;
-    /* shadow-middle */
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-}
-
-.button-box-website {
-    display: inline-flex;
-    margin-left: 8px;
-    margin-top: 94px;
-    width: 128px;
-    height: 38px;
-    background: #F5F4FA;
-    border-radius: 4px;
-}
-
-.button-box-apps {
-    display: inline-flex;
-    margin-left: 8px;
-    margin-top: 94px;
-    width: 145px;
-    height: 38px;
-    background: #F5F4FA;
-    border-radius: 4px;
-}
-
-.button-box-design {
-    display: inline-flex;
-    margin-left: 8px;
-    margin-top: 94px;
-    width: 103px;
-    height: 38px;
-    background: #F5F4FA;
-    border-radius: 4px;
-}
-
-.button-box-marketing {
-    display: inline-flex;
-    margin-left: 8px;
-    margin-top: 94px;
-    margin-right: 494px;
-    width: 130px;
-    height: 38px;
-    background: #F5F4FA;
-    border-radius: 4px;
+    margin-top: 100px;
+    margin-left: 517px;
 }
 
 
@@ -137,111 +354,122 @@
 
 .all {
     display: flex;
-    width: 29px;
-    height: 26px;
-    margin: 6px 22px;
     border-style: none;
     background-color: #2196F3;
+    width: 73px;
+    height: 38px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .website {
     display: flex;
-    justify-content: center;
-    width: 84px;
-    height: 26px;
-    margin: 6px 22px;
+    text-align: center;
+    width: 128px;
+    height: 38px;
     border-style: none;
     background-color: #F5F4FA;
+    border-radius: 4px;
 }
 
 .apps {
     display: flex;
-    justify-content: center;
-    width: 101px;
-    height: 26px;
-    margin: 6px 22px;
+    text-align: center;
+    width: 145px;
+    height: 38px;
     border-style: none;
     background-color: #F5F4FA;
+    border-radius: 4px;
 }
 
 .design {
     display: flex;
-    justify-content: center;
-    width: 59px;
-    height: 26px;
-    margin: 6px 22px;
+    text-align: center;
+    width: 103px;
+    height: 38px;
     border-style: none;
     background-color: #F5F4FA;
+    border-radius: 4px;
 }
 
 .marketing {
     display: flex;
-    justify-content: center;
-    width: 86px;
-    height: 26px;
-    margin: 6px 22px;
+    text-align: center;
+    width: 130px;
+    height: 38px;
     border-style: none;
     background-color: #F5F4FA;
+    border-radius: 4px;
+}
+
+.text-for-all {
+    padding-top: 6px;
+    padding-left: 22px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    color: #FFFFFF;
+}
+
+.text-for-button {
+    padding-top: 6px;
+    padding-left: 22px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    color: #212121;
 }
 
 
 /* block-images */
 
 .images-box {
-    display: flex;
-    margin-left: 215px;
+    display: inline-flex;
+    padding-top: 50px;
+    padding-left: 215px;
+    padding-bottom: 30px;
 }
 
 .box {
-    display: inline-flex;
+    margin-right: 30px;
     width: 370px;
     height: 404px;
+    background-color: #FFFFFF;
     border: 1px solid #EEEEEE;
-    margin-right: 30px;
-}
-
-.images {
-    width: 370px;
-    height: 294px;
-    padding-left: 0px;
+    padding: 0px;
 }
 
 .for-h3 {
-    display: inline-flex;
-    width: 322px;
-    height: 36px;
-    padding-top: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
-    margin-bottom: 4px;
+    margin-top: 20px;
+    margin-left: 24px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    color: #212121;
+    text-transform: none;
 }
 
 .for-p {
-    display: inline-flex;
-    width: 322px;
-    height: 30px;
-    padding-left: 24px;
-    padding-right: 24px;
     margin-top: 4px;
-    margin-bottom: 20px;
+    margin-left: 24px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.87;
+    color: #757575;
 }
 
-.footer {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 1600px;
-    height: 252px;
-    background-color: #2F303A;
-    margin-top: 94px;
+button:hover {
+    text-decoration: underline #2196F3 0.15em;
 }
 
-.studio-2 {
-    color: white;
-}
-
-.address {
-    display: flex;
-    flex-direction: column;
-    padding-left: 215px;
+button {
+    cursor: pointer;
 }
