--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: black;
 }
 
@@ -44,7 +44,11 @@ li {
     width: 49px;
     height: 16px;
     color: #2196F3;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
     font-size: 14px;
+    line-height: 1.14;
 }
 
 .portfolio {
@@ -52,7 +56,11 @@ li {
     width: 77px;
     height: 16px;
     color: #212121;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
     font-size: 14px;
+    line-height: 1.14;
 }
 
 .contacts {
@@ -60,7 +68,11 @@ li {
     width: 68px;
     height: 16px;
     color: #212121;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
     font-size: 14px;
+    line-height: 1.14;
 }
 
 .mail {
@@ -70,6 +82,15 @@ li {
     width: 135px;
     height: 16px;
     text-decoration: none;
+    color: #757575;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+}
+
+.mail:hover {
     color: #2196F3;
 }
 
@@ -79,6 +100,11 @@ li {
     padding-left: 50px;
     text-decoration: none;
     color: #757575;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
 }
 
 a:hover {
@@ -117,6 +143,7 @@ a {
     width: 200px;
     height: 50px;
     margin-left: 700px;
+    font: inherit;
 }
 
 .text-button {
@@ -133,7 +160,7 @@ a {
     padding-right: 215px;
 }
 
-h3 {
+.names {
     color: #212121;
     font-family: Roboto;
     font-style: normal;
@@ -143,13 +170,21 @@ h3 {
     text-transform: uppercase;
 }
 
-p {
+.names:hover {
+    text-decoration: underline #2196F3 0.15em;
+}
+
+.p-style {
     color: #757575;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
+}
+
+.p-style:hover {
+    text-decoration: underline #2196F3 0.15em;
 }
 
 .block {
@@ -159,7 +194,7 @@ p {
     padding-top: 94px;
 }
 
-h2 {
+.h2-style {
     text-align: center;
     color: #212121;
     font-family: Roboto;
@@ -333,6 +368,11 @@ footer {
     height: 16px;
     text-decoration: none;
     color: #757575;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
 }
 
 .phone-portfolio {
@@ -341,6 +381,11 @@ footer {
     padding-left: 50px;
     text-decoration: none;
     color: #757575;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
 }
 
 .buttons {
@@ -360,6 +405,15 @@ footer {
     height: 38px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+}
+
+.all:hover,
+.website:hover,
+.apps:hover,
+.design:hover,
+.marketing:hover {
+    border-radius: 4px;
+    border: solid #2196F3 0.15em;
 }
 
 .website {
@@ -413,6 +467,11 @@ footer {
     color: #FFFFFF;
 }
 
+.text-for-all:hover {
+    text-decoration: underline #2196F3 0.15em;
+    cursor: pointer;
+}
+
 .text-for-button {
     padding-top: 6px;
     padding-left: 22px;
@@ -424,6 +483,11 @@ footer {
     color: #212121;
 }
 
+.text-for-button:hover {
+    text-decoration: underline #2196F3 0.15em;
+    cursor: pointer;
+}
+
 
 /* block-images */
 
@@ -431,7 +495,6 @@ footer {
     display: inline-flex;
     padding-top: 50px;
     padding-left: 215px;
-    padding-bottom: 30px;
 }
 
 .box {
@@ -440,10 +503,11 @@ footer {
     height: 404px;
     background-color: #FFFFFF;
     border: 1px solid #EEEEEE;
+    padding-top: 30px;
     padding: 0px;
 }
 
-.for-h3 {
+.for-h2 {
     margin-top: 20px;
     margin-left: 24px;
     font-family: Roboto;
@@ -453,6 +517,10 @@ footer {
     line-height: 2;
     color: #212121;
     text-transform: none;
+}
+
+.for-h2:hover {
+    text-decoration: underline #2196F3 0.15em;
 }
 
 .for-p {
@@ -466,10 +534,6 @@ footer {
     color: #757575;
 }
 
-button:hover {
+.for-p:hover {
     text-decoration: underline #2196F3 0.15em;
-}
-
-button {
-    cursor: pointer;
 }
