--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --main-color: #212121;
+    --second-color: #757575;
+    --main-font-weight: 500;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     color: black;
@@ -16,9 +22,13 @@ body {
     margin-bottom: 25px;
     margin-left: 215px;
     margin-right: 93px;
-    font-size: 26px;
+    font-family: Raleway, sans-serif;
     font-weight: bold;
-    font-family: Raleway;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .web {
@@ -33,10 +43,10 @@ body {
     display: flex;
     margin-top: 32px;
     margin-bottom: 32px;
+    list-style-type: none;
 }
 
-li {
-    list-style-type: none;
+.images-items {
     padding-right: 30px;
 }
 
@@ -44,11 +54,12 @@ li {
     width: 49px;
     height: 16px;
     color: #2196F3;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .portfolio {
@@ -56,11 +67,12 @@ li {
     width: 77px;
     height: 16px;
     color: #212121;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .contacts {
@@ -68,11 +80,12 @@ li {
     width: 68px;
     height: 16px;
     color: #212121;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .mail {
@@ -83,11 +96,12 @@ li {
     height: 16px;
     text-decoration: none;
     color: #757575;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .mail:hover {
@@ -100,19 +114,16 @@ li {
     padding-left: 50px;
     text-decoration: none;
     color: #757575;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
 }
 
-a:hover {
-    text-decoration: underline #2196F3 0.15em;
-}
 
-a {
-    text-decoration: none;
+/* -----------------------------Main-------------------------------- */
+
+.link-for-footer:hover {
+    text-decoration: underline #2196F3 0.15em;
 }
 
 .efect {
@@ -126,13 +137,9 @@ a {
     padding-top: 200px;
     color: #FFFFFF;
     text-transform: uppercase;
-    font-family: 'Roboto';
     font-weight: 900;
     font-size: 44px;
-    letter-spacing: 0.06em;
-    font-style: normal;
     line-height: 1.36;
-    margin-bottom: 30px;
 }
 
 .order {
@@ -144,10 +151,14 @@ a {
     height: 50px;
     margin-left: 700px;
     font: inherit;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
 }
 
 .text-button {
-    font-family: Roboto;
+    font-family: inherit;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -158,12 +169,11 @@ a {
     display: inline-flex;
     padding-left: 215px;
     padding-right: 215px;
+    list-style-type: none;
 }
 
 .names {
-    color: #212121;
-    font-family: Roboto;
-    font-style: normal;
+    color: var(--main-color);
     font-weight: bold;
     font-size: 14px;
     line-height: 1.14;
@@ -175,9 +185,8 @@ a {
 }
 
 .p-style {
-    color: #757575;
-    font-family: Roboto;
-    font-style: normal;
+    color: var(--second-color);
+    font-family: inherit;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
@@ -192,13 +201,12 @@ a {
     height: 75px;
     padding-right: 30px;
     padding-top: 94px;
+    list-style-type: none;
 }
 
 .h2-style {
     text-align: center;
-    color: #212121;
-    font-family: Roboto;
-    font-style: normal;
+    color: var(--main-color);
     font-weight: bold;
     font-size: 36px;
     line-height: 1.16;
@@ -211,6 +219,7 @@ a {
     padding-left: 215px;
     padding-right: 215px;
     padding-top: 50px;
+    list-style-type: none;
 }
 
 .dream-team {
@@ -231,23 +240,20 @@ a {
 .full-name {
     text-align: center;
     margin-top: 30px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 16px;
     line-height: 1.18;
-    color: #212121;
+    letter-spacing: 0.03em;
+    color: var(--main-color);
 }
 
 .position {
     text-align: center;
     margin-top: 10px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 16px;
     line-height: 1.18;
-    color: #757575;
+    letter-spacing: 0.03em;
+    color: var(--second-color);
 }
 
 footer {
@@ -266,45 +272,51 @@ footer {
     width: 145px;
     height: 31px;
     margin-left: 215px;
-    font-size: 26px;
+    font-family: Ralewa, sans-serif;
+    font-style: normal;
     font-weight: bold;
-    font-family: Raleway;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .map-footer {
     display: flex;
     margin-left: 215px;
     padding-top: 20px;
-    font-family: Roboto;
-    font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     color: #FFFFFF;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .mail-footer {
     display: flex;
     margin-left: 215px;
     padding-top: 9px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
     line-height: 1.74;
     color: rgba(255, 255, 255, 0.6);
+    letter-spacing: 0.03em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .tel-footer {
     display: flex;
     margin-left: 215px;
     padding-top: 9px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
     line-height: 1.74;
     color: rgba(255, 255, 255, 0.6);
+    letter-spacing: 0.03em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 
@@ -326,7 +338,10 @@ footer {
     margin-right: 93px;
     font-size: 26px;
     font-weight: bold;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
+    letter-spacing: 0.03em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .web-portfolio {
@@ -334,7 +349,7 @@ footer {
 }
 
 .studio-portfolio {
-    color: black;
+    color: var(--main-color);
 }
 
 .portfolio-2 {
@@ -343,21 +358,33 @@ footer {
     height: 16px;
     color: #2196F3;
     font-size: 14px;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .studia-portfolio {
     width: 49px;
     height: 16px;
-    color: #212121;
+    color: var(--main-color);
+    font-weight: var(--main-font-weight);
     font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .contacts-portfolio {
     padding-left: 50px;
     width: 68px;
     height: 16px;
-    color: #212121;
+    color: var(--main-color);
+    font-weight: var(--main-font-weight);
     font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .mail-portfolio {
@@ -368,11 +395,12 @@ footer {
     height: 16px;
     text-decoration: none;
     color: #757575;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .phone-portfolio {
@@ -381,17 +409,19 @@ footer {
     padding-left: 50px;
     text-decoration: none;
     color: #757575;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: underline #2196F3 0.15em;
+    text-decoration: none;
 }
 
 .buttons {
     display: flex;
     margin-top: 100px;
     margin-left: 517px;
+    list-style-type: none;
 }
 
 
@@ -459,11 +489,10 @@ footer {
 .text-for-all {
     padding-top: 6px;
     padding-left: 22px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 16px;
     line-height: 1.62;
+    letter-spacing: 0.03em;
     color: #FFFFFF;
 }
 
@@ -475,12 +504,11 @@ footer {
 .text-for-button {
     padding-top: 6px;
     padding-left: 22px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
+    font-weight: var(--main-font-weight);
     font-size: 16px;
     line-height: 1.62;
-    color: #212121;
+    letter-spacing: 0.03em;
+    color: var(--main-color);
 }
 
 .text-for-button:hover {
@@ -505,17 +533,17 @@ footer {
     border: 1px solid #EEEEEE;
     padding-top: 30px;
     padding: 0px;
+    list-style-type: none;
 }
 
 .for-h2 {
     margin-top: 20px;
     margin-left: 24px;
-    font-family: Roboto;
-    font-style: normal;
     font-weight: bold;
     font-size: 18px;
     line-height: 2;
-    color: #212121;
+    letter-spacing: 0.06em;
+    color: var(--main-color);
     text-transform: none;
 }
 
@@ -526,12 +554,10 @@ footer {
 .for-p {
     margin-top: 4px;
     margin-left: 24px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 16px;
     line-height: 1.87;
-    color: #757575;
+    letter-spacing: 0.03em;
+    color: var(--second-color);
 }
 
 .for-p:hover {
