--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding: 0;
+}
+
+
+/* ----------------------reset---------------------------------- */
+
 :root {
     --main-color: #212121;
     --second-color: #757575;
@@ -9,19 +28,21 @@ body {
     color: black;
 }
 
+.conteiner {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
 .header-web {
-    display: inline-flex;
-    width: 1600px;
-    height: 80px;
+    padding-top: 24px;
+    padding-bottom: 32px;
 }
 
 .logo {
     width: 145px;
     height: 31px;
-    margin-top: 24px;
-    margin-bottom: 25px;
-    margin-left: 215px;
-    margin-right: 93px;
     font-family: Raleway, sans-serif;
     font-weight: bold;
     font-size: 26px;
@@ -41,14 +62,11 @@ body {
 }
 
 .menu {
-    display: flex;
-    margin-top: 32px;
-    margin-bottom: 32px;
     list-style-type: none;
 }
 
 .images-items {
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .studia {
@@ -63,7 +81,6 @@ body {
 }
 
 .portfolio {
-    padding-left: 50px;
     width: 77px;
     height: 16px;
     color: #212121;
@@ -75,7 +92,6 @@ body {
 }
 
 .contacts {
-    padding-left: 50px;
     width: 68px;
     height: 16px;
     color: #212121;
@@ -87,9 +103,6 @@ body {
 }
 
 .mail {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    margin-left: 331px;
     width: 135px;
     height: 16px;
     text-decoration: none;
@@ -106,9 +119,6 @@ body {
 }
 
 .phone {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 50px;
     text-decoration: none;
     color: #757575;
     font-weight: var(--main-font-weight);
@@ -119,22 +129,20 @@ body {
 
 /* -----------------------------Main-------------------------------- */
 
-.link-for-footer:hover {}
-
 .efect {
     background-color: #2F303A;
-    width: 1600px;
-    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .for-h1 {
     text-align: center;
-    padding-top: 200px;
     color: #FFFFFF;
     text-transform: uppercase;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
+    margin-bottom: 40px
 }
 
 .order {
@@ -144,7 +152,6 @@ body {
     text-align: center;
     width: 200px;
     height: 50px;
-    margin-left: 700px;
     font: inherit;
     font-weight: bold;
     font-size: 16px;
@@ -161,10 +168,18 @@ body {
 }
 
 .items {
-    display: inline-flex;
-    padding-left: 215px;
-    padding-right: 215px;
+    display: flex;
     list-style-type: none;
+}
+
+.our-sence {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.evocation {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .names {
@@ -173,6 +188,7 @@ body {
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
 .p-style {
@@ -186,67 +202,64 @@ body {
 .block {
     width: 270px;
     height: 75px;
-    padding-right: 30px;
-    padding-top: 94px;
     list-style-type: none;
 }
 
 .h2-style {
-    text-align: center;
     color: var(--main-color);
     font-weight: bold;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
-    padding-top: 94px;
+    margin-bottom: 50px;
 }
 
 .images {
-    display: inline-flex;
-    padding-left: 215px;
-    padding-right: 215px;
-    padding-top: 50px;
+    display: flex;
     list-style-type: none;
 }
 
 .dream-team {
-    margin-top: 94px;
     background-color: #F5F4FA;
     width: 1600px;
     height: 648px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .team {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    margin-right: 30px;
     width: 270px;
-    padding: 0px;
+    margin-right: 30px;
 }
 
 .full-name {
     text-align: center;
-    margin-top: 30px;
     font-weight: var(--main-font-weight);
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
     color: var(--main-color);
+    margin-top: 30px;
 }
 
 .position {
     text-align: center;
-    margin-top: 10px;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
     color: var(--second-color);
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 footer {
     background-color: #2F303A;
     width: 1600px;
     height: 252px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .studio-footer {
@@ -255,11 +268,8 @@ footer {
 }
 
 .logo-footer {
-    display: flex;
-    padding-top: 60px;
     width: 145px;
     height: 31px;
-    margin-left: 215px;
     font-family: Raleway, sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -270,9 +280,6 @@ footer {
 }
 
 .map-footer {
-    display: flex;
-    margin-left: 215px;
-    padding-top: 20px;
     font-family: inherit;
     font-style: normal;
     font-weight: normal;
@@ -284,9 +291,6 @@ footer {
 }
 
 .mail-footer {
-    display: flex;
-    margin-left: 215px;
-    padding-top: 9px;
     font-style: normal;
     font-size: 14px;
     line-height: 1.74;
@@ -296,9 +300,6 @@ footer {
 }
 
 .tel-footer {
-    display: flex;
-    margin-left: 215px;
-    padding-top: 9px;
     font-style: normal;
     font-size: 14px;
     line-height: 1.74;
@@ -311,19 +312,16 @@ footer {
 /* -------------------------------------page-portfolio---------------------- */
 
 .header-portfolio {
-    display: inline-flex;
     width: 1600px;
     height: 80px;
     border-bottom: 1px solid #ECECEC;
+    padding-top: 24px;
+    padding-bottom: 32px;
 }
 
 .logo-portfolio {
     width: 145px;
     height: 31px;
-    margin-top: 24px;
-    margin-bottom: 25px;
-    margin-left: 215px;
-    margin-right: 93px;
     font-size: 26px;
     font-weight: bold;
     font-family: Raleway, sans-serif;
@@ -340,7 +338,6 @@ footer {
 }
 
 .portfolio-2 {
-    padding-left: 50px;
     width: 77px;
     height: 16px;
     color: #2196F3;
@@ -360,7 +357,6 @@ footer {
 }
 
 .contacts-portfolio {
-    padding-left: 50px;
     width: 68px;
     height: 16px;
     color: var(--main-color);
@@ -372,9 +368,6 @@ footer {
 }
 
 .mail-portfolio {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    margin-left: 331px;
     width: 135px;
     height: 16px;
     text-decoration: none;
@@ -387,9 +380,6 @@ footer {
 }
 
 .phone-portfolio {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 50px;
     text-decoration: none;
     color: #757575;
     font-weight: var(--main-font-weight);
@@ -399,18 +389,20 @@ footer {
     text-decoration: none;
 }
 
+.main-section {
+    padding-top: 100px;
+    padding-bottom: 94px;
+}
+
 .buttons {
-    display: flex;
-    margin-top: 100px;
-    margin-left: 517px;
     list-style-type: none;
+    margin-bottom: 50px;
 }
 
 
 /* for buttons */
 
 .all {
-    display: flex;
     border-style: none;
     background-color: #2196F3;
     width: 73px;
@@ -429,7 +421,6 @@ footer {
 }
 
 .website {
-    display: flex;
     text-align: center;
     width: 128px;
     height: 38px;
@@ -439,7 +430,6 @@ footer {
 }
 
 .apps {
-    display: flex;
     text-align: center;
     width: 145px;
     height: 38px;
@@ -449,7 +439,6 @@ footer {
 }
 
 .design {
-    display: flex;
     text-align: center;
     width: 103px;
     height: 38px;
@@ -459,7 +448,6 @@ footer {
 }
 
 .marketing {
-    display: flex;
     text-align: center;
     width: 130px;
     height: 38px;
@@ -471,8 +459,6 @@ footer {
 .text-for-all {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    padding-top: 6px;
-    padding-left: 22px;
     font-weight: var(--main-font-weight);
     font-size: 16px;
     line-height: 1.62;
@@ -487,8 +473,6 @@ footer {
 .text-for-button {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    padding-top: 6px;
-    padding-left: 22px;
     font-weight: var(--main-font-weight);
     font-size: 16px;
     line-height: 1.62;
@@ -504,42 +488,36 @@ footer {
 /* block-images */
 
 .images-box {
-    display: inline-flex;
-    padding-top: 50px;
-    padding-left: 215px;
+    margin-bottom: 30px;
 }
 
 .box {
-    margin-right: 30px;
     width: 370px;
     height: 404px;
     background-color: #FFFFFF;
     border: 1px solid #EEEEEE;
-    padding-top: 30px;
-    padding: 0px;
     list-style-type: none;
 }
 
 .for-h2 {
-    margin-top: 20px;
-    margin-left: 24px;
     font-weight: bold;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--main-color);
     text-transform: none;
+    margin-top: 20px;
 }
 
 .for-h2:hover {}
 
 .for-p {
-    margin-top: 4px;
-    margin-left: 24px;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--second-color);
+    margin-top: 4px;
+    margin-bottom: 20px;
 }
 
 .for-p:hover {}
